# mcp-music-analysis

./: .gitignore  Booba - Dolce Camara ft. SDM (Clip Vidéo).m4a  Dockerfile  README.md  README.me  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  smithery.yaml  test.py
.github/workflows/: publish.yml  test.yml
src/: server.py
src/mcp_music_analysis/: server.py
