[project]
name = "mcp-music-analysis"
version = "0.1.0"
description = "\\A MCP server with music tools\\"
readme = "README.md"
requires-python = "==3.11.0"
dependencies = [ "fastmcp==0.4.1", "librosa>=0.9.2", "matplotlib>=3.5.1", "numpy>=1.21.0", "pytubefix==8.12.2" ]

[[project.authors]]
name = "hugohow"
email = "hugohowchoong@gmail.com"
